# Comp-Processor

./: CMakeLists.txt  README.md
src/ALU/: ALU.c
src/DataMemory/: DataMemory.c
src/Headers/: ALU.h  DataMemory.h  InstructionMemory.h  Registers.h  Structs.h
src/InstructionMemory/: InstructionMemory.c
src/Main/: Main.c
src/Registers/: Registers.c
src/Test/: ADD-Test.txt  ALL_test.txt  ANDI-Test.txt  BEQZ-Test.txt  BR-Test.txt  EOR-Test.txt  Expected-Output.md  LDR-STR-Test.txt  MOVI-Test.txt  MUL-Test.txt  SAL-Test.txt  SAR-Test.txt  SUB-Test.txt
